--- a/RandomDataGenerator/RandomDataGenerator.vcxproj
+++ b/RandomDataGenerator/RandomDataGenerator.vcxproj
@@ -185,6 +185,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommonUtility.h" />
+    <ClInclude Include="ConvertUtility.h" />
     <ClInclude Include="RandomDataGenerator.h" />
     <ClInclude Include="RandomDataGeneratorDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -192,6 +194,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CommonUtility.cpp" />
+    <ClCompile Include="ConvertUtility.cpp" />
     <ClCompile Include="RandomDataGenerator.cpp" />
     <ClCompile Include="RandomDataGeneratorDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -213,4 +217,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="RandomDataGenerator.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
